1) Fix issue with pagination logic 2) Minor issue with results alignment 3) Fix issue with driver initialization

--- a/src/css/search-results.css
+++ b/src/css/search-results.css
@@ -14,7 +14,6 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 20px;
     width:100%;
     display: -webkit-box;
     display: -ms-flexbox;
